--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
 
-    background-image: url(../../images/bg-header-desktop.png);
+    background-image: url(../images/bg-header-desktop.png);
     background-size: cover;
     background-position: top;
 
