--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,10 @@
 
 // COMPONENT
 @import "component/btn";
+@import "component/card";
 
 
 // LAYOUT
+@import "layout/about";
+@import "layout/featurs";
 @import "layout/header";
