dowmload section added

--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,10 @@ body {
   grid-column: 1/-1;
 }
 
+.download {
+  margin-top: 15rem;
+}
+
 .featurs__card {
   display: flex;
   align-items: center;
