--- a/sass/layout/_featurs.scss
+++ b/sass/layout/_featurs.scss
@@ -11,13 +11,13 @@
 
         }
 
-        &--social {
+        &--brand {
             margin-top: 15rem;
         }
 
     }
 
-    &__social {
+    &__brand {
         margin-top: 15rem;
     }
 
