--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,4 +18,5 @@
 @import "layout/about";
 @import "layout/download";
 @import "layout/featurs";
+@import "layout/footer";
 @import "layout/header";
