--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,5 +4,9 @@ $Light-Blue: hsl(233, 100%, 69%);
 $Dark-Grayish-Blue: hsl(210, 10%, 33%);
 $Grayish-Blue: hsl(201, 11%, 66%);
 
+$Gray-light : #eee;
+
 $white:#fff;
 $dark : #000;
+
+
