--- a/sass/component/_btn.scss
+++ b/sass/component/_btn.scss
@@ -18,7 +18,6 @@
 
         border-radius: 100px;
 
-        box-shadow: 0 1.5rem 3rem rgba($dark, .4);
         color: $white;
 
         display: inline-block;
@@ -28,8 +27,6 @@
 
     &:hover {
         transform: translateY(-.5rem);
-
-        box-shadow: 0 1.5rem 3rem rgba($dark, .2);
     }
 
     &:active {
@@ -40,10 +37,14 @@
 
     &--green {
         background-color: $Strong-Cyan;
+        box-shadow: 0 1.5rem 3rem rgba($Strong-Cyan, .4);
+
     }
 
     &--blue {
         background-color: $Light-Blue;
+        box-shadow: 0 1.5rem 3rem rgba($Light-Blue, .4);
+
     }
 
 }
