--- a/sass/component/_card.scss
+++ b/sass/component/_card.scss
@@ -1,7 +1,6 @@
-.card-box{
-    width: 50%;
-
-    &--center{
-        text-align: center;
-    }
+.card {
+    text-align: center;
+    width: 30rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
