--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,4 @@
 // ABSTRACTS
-@import "abstracts/function";
 @import "abstracts/mixin";
 @import "abstracts/variables";
 
@@ -16,6 +15,7 @@
 
 // LAYOUT
 @import "layout/about";
+@import "layout/brands";
 @import "layout/download";
 @import "layout/featurs";
 @import "layout/footer";
