--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,27 @@
 }
 
 html {
-  font-size: 62.5%;
   box-sizing: border-box;
+}
+@media only screen and (min-width: 23.43em) {
+  html {
+    font-size: 43.75%;
+  }
+}
+@media only screen and (min-width: 30em) {
+  html {
+    font-size: 50%;
+  }
+}
+@media only screen and (min-width: 68.75em) {
+  html {
+    font-size: 62.5%;
+  }
+}
+@media only screen and (min-width: 90em) {
+  html {
+    font-size: 75%;
+  }
 }
 
 body {
@@ -66,25 +85,25 @@ body {
   font-family: "Bai Jamjuree", sans-serif;
 }
 
-.heading__primary {
-  width: 50%;
-}
 .heading__primary--main {
+  padding: 0 1.5rem;
   font-size: 4.1rem;
   font-weight: 400;
   word-spacing: 3.5px;
-  display: inline-block;
+  display: block;
   animation: moveLeft 1s 0.3s ease backwards;
 }
 .heading__primary--sub {
   font-size: 1.8rem;
   font-weight: 600;
-  display: inline-block;
+  display: block;
   color: #9fabb2;
+  width: 65%;
   animation: moveRight 1s 0.3s ease backwards;
 }
 
 .heading__secondary--main {
+  padding: 0 1.5rem;
   font-size: 3.5rem;
   font-weight: 400;
   word-spacing: 3.5px;
@@ -98,6 +117,7 @@ body {
 }
 
 .heading__tertiary--main {
+  padding: 0 1.5rem;
   font-size: 2.5rem;
   font-weight: 400;
   word-spacing: 3.5px;
@@ -237,8 +257,12 @@ body {
   margin: 3rem 0;
 }
 
+.ml-re {
+  margin-left: -3rem;
+}
+
 .tc {
-  text-align: center;
+  text-align: center !important;
 }
 
 .ma {
@@ -248,6 +272,19 @@ body {
 .btn-box {
   padding: 1rem 2rem;
   font-size: 1.5rem;
+}
+@media only screen and (min-width: 23.43em) {
+  .btn-box {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+@media only screen and (min-width: 37.5em) {
+  .btn-box {
+    display: block;
+  }
 }
 
 .btn-animate {
@@ -261,6 +298,16 @@ body {
   color: #fff;
   display: inline-block;
   transition: all 0.3s;
+}
+@media only screen and (min-width: 23.43em) {
+  .btn:link, .btn:visited {
+    margin: 1rem 0;
+  }
+}
+@media only screen and (min-width: 37.5em) {
+  .btn:link, .btn:visited {
+    margin: 0 1rem;
+  }
 }
 .btn:hover {
   transform: translateY(-0.5rem);
@@ -278,62 +325,129 @@ body {
   box-shadow: 0 1.5rem 3rem rgba(97, 115, 255, 0.4);
 }
 
-.card-box {
-  width: 50%;
-}
-.card-box--center {
+.card {
   text-align: center;
+  width: 30rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .about {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 8rem;
+  grid-gap: 5rem;
+  justify-items: center;
 }
-.about__picture-box--computer {
-  grid-column: 1/3;
-  overflow: hidden;
+@media only screen and (min-width: 23.43em) {
+  .about__picture-box {
+    height: 25rem;
+  }
+}
+@media only screen and (min-width: 53.12em) {
+  .about__picture-box {
+    height: 50rem;
+  }
+}
+@media only screen and (min-width: 23.43em) {
+  .about__picture-box--computer {
+    grid-column: 1/-1;
+  }
+}
+@media only screen and (min-width: 53.12em) {
+  .about__picture-box--computer {
+    grid-column: 1/3;
+  }
 }
 .about__picture-box--device {
   grid-column: 2/4;
 }
 .about__picture {
-  width: 105%;
-  transform: translateX(-5rem);
+  height: 100%;
+}
+@media only screen and (min-width: 23.43em) {
+  .about__picture {
+    margin: 0;
+  }
+}
+@media only screen and (min-width: 53.12em) {
+  .about__picture {
+    margin-right: 4.5rem;
+  }
 }
 .about__details {
   grid-column: 3/5;
-  padding-top: 5rem;
   display: grid;
-  grid-row-gap: 5rem;
   grid-template-rows: repeat(3, min-content);
+  margin-top: -4rem;
+}
+@media only screen and (min-width: 23.43em) {
+  .about__details {
+    grid-column: 2/4;
+  }
+}
+@media only screen and (min-width: 53.12em) {
+  .about__details {
+    grid-column: 3/5;
+  }
+}
+@media only screen and (min-width: 23.43em) {
+  .about__details .card {
+    text-align: center;
+  }
+}
+@media only screen and (min-width: 53.12em) {
+  .about__details .card {
+    text-align: left;
+  }
 }
 .about__heading {
   width: 50%;
   grid-column: 1/-1;
+  text-align: left;
+}
+
+.brands__cards {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 10rem;
+}
+.brands__logo--box {
+  text-align: center;
+}
+@media only screen and (min-width: 23.43em) {
+  .brands__logo--box {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 37.5em) {
+  .brands__logo--box:not(:last-child) {
+    width: 50%;
+  }
+}
+@media only screen and (min-width: 53.12em) {
+  .brands__logo--box {
+    width: 25% !important;
+  }
+}
+@media only screen and (min-width: 68.75em) {
+  .brands__logo--box {
+    width: 15% !important;
+  }
 }
 
 .download {
   margin-top: 15rem;
 }
 
-.featurs__card {
+.featurs__cards {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 10rem;
-}
-.featurs__card--details {
-  margin-top: 7.5rem;
-}
-.featurs__card--brand {
-  margin-top: 15rem;
-}
-.featurs__brand {
-  margin-top: 15rem;
-}
-.featurs__photo {
-  width: 50%;
+  flex-wrap: wrap;
+  padding: 1rem 2rem;
+  margin: 10rem 0;
 }
 
 .footer {
@@ -343,31 +457,75 @@ body {
   margin-top: 10rem;
   background-color: #eee;
 }
+@media only screen and (min-width: 23.43em) {
+  .footer {
+    flex-direction: column;
+  }
+}
+@media only screen and (min-width: 37.5em) {
+  .footer {
+    flex-direction: row;
+  }
+}
 .footer__logo {
   width: 5.5rem;
   height: 5.5rem;
-  margin-right: 8rem;
 }
-.footer__nav {
-  margin-right: auto;
+@media only screen and (min-width: 23.43em) {
+  .footer__logo {
+    margin-right: 0rem;
+  }
+}
+@media only screen and (min-width: 37.5em) {
+  .footer__logo {
+    margin-right: 8rem;
+  }
+}
+@media only screen and (min-width: 23.43em) {
+  .footer__nav {
+    margin: 3rem 0;
+  }
+}
+@media only screen and (min-width: 37.5em) {
+  .footer__nav {
+    margin: 0 auto 0 0;
+  }
 }
 .footer__list {
+  width: 45vw;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 15rem;
-  grid-row-gap: 1rem;
+  grid-gap: 1.3rem;
 }
-.footer__item {
-  padding: 0.6rem 0;
+@media only screen and (min-width: 23.43em) {
+  .footer__list {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+}
+@media only screen and (min-width: 37.5em) {
+  .footer__list {
+    justify-items: start;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  }
 }
 .footer__link:link, .footer__link:visited {
+  display: inline-block;
   text-decoration: none;
   color: #4c545d;
   font-size: 1.5rem;
   font-weight: 600;
   transition: transform 0.2s;
-  display: inline-block;
+}
+@media only screen and (min-width: 23.43em) {
+  .footer__link:link, .footer__link:visited {
+    padding: 0rem;
+  }
+}
+@media only screen and (min-width: 37.5em) {
+  .footer__link:link, .footer__link:visited {
+    padding: 1.5rem;
+  }
 }
 .footer__link:link:not(:last-child), .footer__link:visited:not(:last-child) {
   margin-right: 1.5rem;
@@ -378,8 +536,14 @@ body {
 .footer__link:active {
   transform: translateY(-0.2rem) scale(1.02);
 }
+.footer__social {
+  display: flex;
+  align-items: center;
+}
 .footer__icon {
   cursor: pointer;
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
 .header {
