--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,23 +1,20 @@
 .heading__primary {
 
-    width: 50%;
-
     &--main {
+        padding: 0 1.5rem;
         font-size: 4.1rem;
         font-weight: 400;
         word-spacing: 3.5px;
-        display: inline-block;
-
+        display: block;
         animation: moveLeft 1s .3s ease backwards;
-
     }
 
     &--sub {
         font-size: 1.8rem;
         font-weight: 600;
-        display: inline-block;
+        display: block;
         color: $Grayish-Blue;
-
+        width: 65%;
         animation: moveRight 1s .3s ease backwards;
     }
 }
@@ -25,12 +22,11 @@
 .heading__secondary {
 
     &--main {
+        padding: 0 1.5rem;
         font-size: 3.5rem;
         font-weight: 400;
         word-spacing: 3.5px;
         display: block;
-
-
     }
 
     &--sub {
@@ -38,20 +34,16 @@
         font-weight: 600;
         display: block;
         color: $Grayish-Blue;
-
     }
-
 }
 
-
 .heading__tertiary {
-
     &--main {
+        padding: 0 1.5rem;
         font-size: 2.5rem;
         font-weight: 400;
         word-spacing: 3.5px;
         display: block;
-
     }
 
     &--sub {
@@ -60,9 +52,7 @@
         color: $Grayish-Blue;
         display: block;
     }
-
 }
-
 
 .paragraph {
     font-size: 1.3rem;
