css file compreesed and autoprefixer added

--- a/css/style.css
+++ b/css/style.css
@@ -1,565 +1,1 @@
-@keyframes moveDown {
-  0% {
-    opacity: 0;
-    transform: translateY(-4rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@keyframes moveUp {
-  0% {
-    opacity: 0;
-    transform: translateY(4rem);
-  }
-  50% {
-    transform: translateY(-1rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@keyframes moveLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-6rem);
-  }
-  50% {
-    transform: translateX(2rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-@keyframes moveRight {
-  0% {
-    opacity: 0;
-    transform: translateX(6rem);
-  }
-  50% {
-    transform: translateX(-2rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-*,
-*::after,
-*::before {
-  padding: 0;
-  margin: 0;
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
-}
-@media only screen and (min-width: 23.43em) {
-  html {
-    font-size: 43.75%;
-  }
-}
-@media only screen and (min-width: 30em) {
-  html {
-    font-size: 50%;
-  }
-}
-@media only screen and (min-width: 68.75em) {
-  html {
-    font-size: 62.5%;
-  }
-}
-@media only screen and (min-width: 90em) {
-  html {
-    font-size: 75%;
-  }
-}
-
-body {
-  line-height: 1.7;
-  font-size: 1.8rem;
-  font-family: "Bai Jamjuree", sans-serif;
-}
-
-.heading__primary--main {
-  padding: 0 1.5rem;
-  font-size: 4.1rem;
-  font-weight: 400;
-  word-spacing: 3.5px;
-  display: block;
-  animation: moveLeft 1s 0.3s ease backwards;
-}
-.heading__primary--sub {
-  font-size: 1.8rem;
-  font-weight: 600;
-  display: block;
-  color: #9fabb2;
-  width: 65%;
-  animation: moveRight 1s 0.3s ease backwards;
-}
-
-.heading__secondary--main {
-  padding: 0 1.5rem;
-  font-size: 3.5rem;
-  font-weight: 400;
-  word-spacing: 3.5px;
-  display: block;
-}
-.heading__secondary--sub {
-  font-size: 1.7rem;
-  font-weight: 600;
-  display: block;
-  color: #9fabb2;
-}
-
-.heading__tertiary--main {
-  padding: 0 1.5rem;
-  font-size: 2.5rem;
-  font-weight: 400;
-  word-spacing: 3.5px;
-  display: block;
-}
-.heading__tertiary--sub {
-  font-size: 1.4rem;
-  font-weight: 600;
-  color: #9fabb2;
-  display: block;
-}
-
-.paragraph {
-  font-size: 1.3rem;
-  font-weight: 600;
-  color: #9fabb2;
-  padding: 0 5rem;
-}
-
-.mt-s {
-  margin-top: 0.8rem;
-}
-
-.mt-m {
-  margin-top: 1.2rem;
-}
-
-.mt-l {
-  margin-top: 1.8rem;
-}
-
-.mt-b {
-  margin-top: 2rem;
-}
-
-.mt-h {
-  margin-top: 3rem;
-}
-
-.mb-s {
-  margin-bottom: 0.8rem;
-}
-
-.mb-m {
-  margin-bottom: 1.2rem;
-}
-
-.mb-l {
-  margin-bottom: 1.8rem;
-}
-
-.mb-b {
-  margin-bottom: 2rem;
-}
-
-.mb-h {
-  margin-bottom: 3rem;
-}
-
-.ml-s {
-  margin-left: 0.8rem;
-}
-
-.ml-m {
-  margin-left: 1.2rem;
-}
-
-.ml-l {
-  margin-left: 1.8rem;
-}
-
-.ml-b {
-  margin-left: 2rem;
-}
-
-.ml-h {
-  margin-left: 3rem;
-}
-
-.mr-s {
-  margin-right: 0.8rem;
-}
-
-.mr-m {
-  margin-right: 1.2rem;
-}
-
-.mr-l {
-  margin-right: 1.8rem;
-}
-
-.mr-b {
-  margin-right: 2rem;
-}
-
-.mr-h {
-  margin-right: 3rem;
-}
-
-.mx-s {
-  margin: 0 0.8rem;
-}
-
-.mx-m {
-  margin: 0 1.2rem;
-}
-
-.mx-l {
-  margin: 0 1.8rem;
-}
-
-.mx-b {
-  margin: 0 2rem;
-}
-
-.mx-h {
-  margin: 0 3rem;
-}
-
-.my-s {
-  margin: 0.8rem 0;
-}
-
-.my-m {
-  margin: 1.2rem 0;
-}
-
-.my-l {
-  margin: 1.8rem 0;
-}
-
-.my-b {
-  margin: 2rem 0;
-}
-
-.my-h {
-  margin: 3rem 0;
-}
-
-.ml-re {
-  margin-left: -3rem;
-}
-
-.tc {
-  text-align: center !important;
-}
-
-.ma {
-  margin: 0 auto;
-}
-
-.btn-box {
-  padding: 1rem 2rem;
-  font-size: 1.5rem;
-}
-@media only screen and (min-width: 23.43em) {
-  .btn-box {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-  }
-}
-@media only screen and (min-width: 37.5em) {
-  .btn-box {
-    display: block;
-  }
-}
-
-.btn-animate {
-  animation: moveUp 1s 0.5s ease backwards;
-}
-
-.btn:link, .btn:visited {
-  text-decoration: none;
-  padding: 1rem 3rem;
-  border-radius: 100px;
-  color: #fff;
-  display: inline-block;
-  transition: all 0.3s;
-}
-@media only screen and (min-width: 23.43em) {
-  .btn:link, .btn:visited {
-    margin: 1rem 0;
-  }
-}
-@media only screen and (min-width: 37.5em) {
-  .btn:link, .btn:visited {
-    margin: 0 1rem;
-  }
-}
-.btn:hover {
-  transform: translateY(-0.5rem);
-}
-.btn:active {
-  transform: translateY(-0.3rem);
-  box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
-}
-.btn--green {
-  background-color: #26baa4;
-  box-shadow: 0 1.5rem 3rem rgba(38, 186, 164, 0.4);
-}
-.btn--blue {
-  background-color: #6173ff;
-  box-shadow: 0 1.5rem 3rem rgba(97, 115, 255, 0.4);
-}
-
-.card {
-  text-align: center;
-  width: 30rem;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
-
-.about {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 5rem;
-  justify-items: center;
-}
-@media only screen and (min-width: 23.43em) {
-  .about__picture-box {
-    height: 25rem;
-  }
-}
-@media only screen and (min-width: 53.12em) {
-  .about__picture-box {
-    height: 50rem;
-  }
-}
-@media only screen and (min-width: 23.43em) {
-  .about__picture-box--computer {
-    grid-column: 1/-1;
-  }
-}
-@media only screen and (min-width: 53.12em) {
-  .about__picture-box--computer {
-    grid-column: 1/3;
-  }
-}
-.about__picture-box--device {
-  grid-column: 2/4;
-}
-.about__picture {
-  height: 100%;
-}
-@media only screen and (min-width: 23.43em) {
-  .about__picture {
-    margin: 0;
-  }
-}
-@media only screen and (min-width: 53.12em) {
-  .about__picture {
-    margin-right: 4.5rem;
-  }
-}
-.about__details {
-  grid-column: 3/5;
-  display: grid;
-  grid-template-rows: repeat(3, min-content);
-  margin-top: -4rem;
-}
-@media only screen and (min-width: 23.43em) {
-  .about__details {
-    grid-column: 2/4;
-  }
-}
-@media only screen and (min-width: 53.12em) {
-  .about__details {
-    grid-column: 3/5;
-  }
-}
-@media only screen and (min-width: 23.43em) {
-  .about__details .card {
-    text-align: center;
-  }
-}
-@media only screen and (min-width: 53.12em) {
-  .about__details .card {
-    text-align: left;
-  }
-}
-.about__heading {
-  width: 50%;
-  grid-column: 1/-1;
-  text-align: left;
-}
-
-.brands__cards {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin-top: 10rem;
-}
-.brands__logo--box {
-  text-align: center;
-}
-@media only screen and (min-width: 23.43em) {
-  .brands__logo--box {
-    width: 100%;
-  }
-}
-@media only screen and (min-width: 37.5em) {
-  .brands__logo--box:not(:last-child) {
-    width: 50%;
-  }
-}
-@media only screen and (min-width: 53.12em) {
-  .brands__logo--box {
-    width: 25% !important;
-  }
-}
-@media only screen and (min-width: 68.75em) {
-  .brands__logo--box {
-    width: 15% !important;
-  }
-}
-
-.download {
-  margin-top: 15rem;
-}
-
-.featurs__cards {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 1rem 2rem;
-  margin: 10rem 0;
-}
-
-.footer {
-  display: flex;
-  align-items: center;
-  padding: 2rem 10rem;
-  margin-top: 10rem;
-  background-color: #eee;
-}
-@media only screen and (min-width: 23.43em) {
-  .footer {
-    flex-direction: column;
-  }
-}
-@media only screen and (min-width: 37.5em) {
-  .footer {
-    flex-direction: row;
-  }
-}
-.footer__logo {
-  width: 5.5rem;
-  height: 5.5rem;
-}
-@media only screen and (min-width: 23.43em) {
-  .footer__logo {
-    margin-right: 0rem;
-  }
-}
-@media only screen and (min-width: 37.5em) {
-  .footer__logo {
-    margin-right: 8rem;
-  }
-}
-@media only screen and (min-width: 23.43em) {
-  .footer__nav {
-    margin: 3rem 0;
-  }
-}
-@media only screen and (min-width: 37.5em) {
-  .footer__nav {
-    margin: 0 auto 0 0;
-  }
-}
-.footer__list {
-  width: 45vw;
-  list-style: none;
-  display: grid;
-  grid-gap: 1.3rem;
-}
-@media only screen and (min-width: 23.43em) {
-  .footer__list {
-    grid-template-columns: 1fr;
-    justify-items: center;
-  }
-}
-@media only screen and (min-width: 37.5em) {
-  .footer__list {
-    justify-items: start;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  }
-}
-.footer__link:link, .footer__link:visited {
-  display: inline-block;
-  text-decoration: none;
-  color: #4c545d;
-  font-size: 1.5rem;
-  font-weight: 600;
-  transition: transform 0.2s;
-}
-@media only screen and (min-width: 23.43em) {
-  .footer__link:link, .footer__link:visited {
-    padding: 0rem;
-  }
-}
-@media only screen and (min-width: 37.5em) {
-  .footer__link:link, .footer__link:visited {
-    padding: 1.5rem;
-  }
-}
-.footer__link:link:not(:last-child), .footer__link:visited:not(:last-child) {
-  margin-right: 1.5rem;
-}
-.footer__link:hover {
-  transform: translateY(-0.5rem) scale(1.05);
-}
-.footer__link:active {
-  transform: translateY(-0.2rem) scale(1.02);
-}
-.footer__social {
-  display: flex;
-  align-items: center;
-}
-.footer__icon {
-  cursor: pointer;
-  width: 2.5rem;
-  height: 2.5rem;
-}
-
-.header {
-  height: 95vh;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  background-image: url(../images/bg-header-desktop.png);
-  background-size: cover;
-  background-position: top;
-}
-.header__logo {
-  width: 7rem;
-  height: 7rem;
-  animation: moveDown 1.5s ease backwards;
-}
-
-/*# sourceMappingURL=style.css.map */
+@-webkit-keyframes moveDown{0%{opacity:0;transform:translateY(-4rem)}100%{opacity:1;transform:translateY(0)}}@keyframes moveDown{0%{opacity:0;transform:translateY(-4rem)}100%{opacity:1;transform:translateY(0)}}@-webkit-keyframes moveUp{0%{opacity:0;transform:translateY(4rem)}50%{transform:translateY(-1rem)}100%{opacity:1;transform:translateY(0)}}@keyframes moveUp{0%{opacity:0;transform:translateY(4rem)}50%{transform:translateY(-1rem)}100%{opacity:1;transform:translateY(0)}}@-webkit-keyframes moveLeft{0%{opacity:0;transform:translateX(-6rem)}50%{transform:translateX(2rem)}100%{opacity:1;transform:translateX(0)}}@keyframes moveLeft{0%{opacity:0;transform:translateX(-6rem)}50%{transform:translateX(2rem)}100%{opacity:1;transform:translateX(0)}}@-webkit-keyframes moveRight{0%{opacity:0;transform:translateX(6rem)}50%{transform:translateX(-2rem)}100%{opacity:1;transform:translateX(0)}}@keyframes moveRight{0%{opacity:0;transform:translateX(6rem)}50%{transform:translateX(-2rem)}100%{opacity:1;transform:translateX(0)}}*,*::after,*::before{padding:0;margin:0;box-sizing:inherit}html{box-sizing:border-box}@media only screen and (min-width: 23.43em){html{font-size:43.75%}}@media only screen and (min-width: 30em){html{font-size:50%}}@media only screen and (min-width: 68.75em){html{font-size:62.5%}}@media only screen and (min-width: 90em){html{font-size:75%}}body{line-height:1.7;font-size:1.8rem;font-family:'Bai Jamjuree', sans-serif}.heading__primary--main{padding:0 1.5rem;font-size:4.1rem;font-weight:400;word-spacing:3.5px;display:block;-webkit-animation:moveLeft 1s .3s ease backwards;animation:moveLeft 1s .3s ease backwards}.heading__primary--sub{font-size:1.8rem;font-weight:600;display:block;color:#9fabb2;width:65%;-webkit-animation:moveRight 1s .3s ease backwards;animation:moveRight 1s .3s ease backwards}.heading__secondary--main{padding:0 1.5rem;font-size:3.5rem;font-weight:400;word-spacing:3.5px;display:block}.heading__secondary--sub{font-size:1.7rem;font-weight:600;display:block;color:#9fabb2}.heading__tertiary--main{padding:0 1.5rem;font-size:2.5rem;font-weight:400;word-spacing:3.5px;display:block}.heading__tertiary--sub{font-size:1.4rem;font-weight:600;color:#9fabb2;display:block}.paragraph{font-size:1.3rem;font-weight:600;color:#9fabb2;padding:0 5rem}.mt-s{margin-top:.8rem}.mt-m{margin-top:1.2rem}.mt-l{margin-top:1.8rem}.mt-b{margin-top:2rem}.mt-h{margin-top:3rem}.mb-s{margin-bottom:.8rem}.mb-m{margin-bottom:1.2rem}.mb-l{margin-bottom:1.8rem}.mb-b{margin-bottom:2rem}.mb-h{margin-bottom:3rem}.ml-s{margin-left:.8rem}.ml-m{margin-left:1.2rem}.ml-l{margin-left:1.8rem}.ml-b{margin-left:2rem}.ml-h{margin-left:3rem}.mr-s{margin-right:.8rem}.mr-m{margin-right:1.2rem}.mr-l{margin-right:1.8rem}.mr-b{margin-right:2rem}.mr-h{margin-right:3rem}.mx-s{margin:0 .8rem}.mx-m{margin:0 1.2rem}.mx-l{margin:0 1.8rem}.mx-b{margin:0 2rem}.mx-h{margin:0 3rem}.my-s{margin:.8rem 0}.my-m{margin:1.2rem 0}.my-l{margin:1.8rem 0}.my-b{margin:2rem 0}.my-h{margin:3rem 0}.ml-re{margin-left:-3rem}.tc{text-align:center !important}.ma{margin:0 auto}.btn-box{padding:1rem 2rem;font-size:1.5rem}@media only screen and (min-width: 23.43em){.btn-box{display:flex;align-items:center;flex-direction:column;justify-content:center}}@media only screen and (min-width: 37.5em){.btn-box{display:block}}.btn-animate{-webkit-animation:moveUp 1s .5s ease backwards;animation:moveUp 1s .5s ease backwards}.btn:link,.btn:visited{text-decoration:none;padding:1rem 3rem;border-radius:100px;color:#fff;display:inline-block;transition:all .3s}@media only screen and (min-width: 23.43em){.btn:link,.btn:visited{margin:1rem 0}}@media only screen and (min-width: 37.5em){.btn:link,.btn:visited{margin:0 1rem}}.btn:hover{transform:translateY(-0.5rem)}.btn:active{transform:translateY(-0.3rem);box-shadow:0 1.5rem 3rem rgba(0,0,0,0.2)}.btn--green{background-color:#26baa4;box-shadow:0 1.5rem 3rem rgba(38,186,164,0.4)}.btn--blue{background-color:#6173ff;box-shadow:0 1.5rem 3rem rgba(97,115,255,0.4)}.card{text-align:center;width:30rem;margin-top:3rem;margin-bottom:3rem}.about{display:grid;grid-template-columns:repeat(4, 1fr);grid-gap:5rem;justify-items:center}@media only screen and (min-width: 23.43em){.about__picture-box{height:25rem}}@media only screen and (min-width: 53.12em){.about__picture-box{height:50rem}}@media only screen and (min-width: 23.43em){.about__picture-box--computer{grid-column:1 / -1}}@media only screen and (min-width: 53.12em){.about__picture-box--computer{grid-column:1/3}}.about__picture-box--device{grid-column:2/4}.about__picture{height:100%}@media only screen and (min-width: 23.43em){.about__picture{margin:0}}@media only screen and (min-width: 53.12em){.about__picture{margin-right:4.5rem}}.about__details{grid-column:3/5;display:grid;grid-template-rows:repeat(3, -webkit-min-content);grid-template-rows:repeat(3, min-content);margin-top:-4rem}@media only screen and (min-width: 23.43em){.about__details{grid-column:2 / 4}}@media only screen and (min-width: 53.12em){.about__details{grid-column:3/5}}@media only screen and (min-width: 23.43em){.about__details .card{text-align:center}}@media only screen and (min-width: 53.12em){.about__details .card{text-align:left}}.about__heading{width:50%;grid-column:1 / -1;text-align:left}.brands__cards{display:flex;align-items:center;justify-content:center;flex-wrap:wrap;margin-top:10rem}.brands__logo--box{text-align:center}@media only screen and (min-width: 23.43em){.brands__logo--box{width:100%}.brands__logo--box:not(:last-child){margin-bottom:5rem}}@media only screen and (min-width: 37.5em){.brands__logo--box:not(:last-child){width:50%}}@media only screen and (min-width: 53.12em){.brands__logo--box{width:25% !important}}@media only screen and (min-width: 68.75em){.brands__logo--box{width:15% !important}}.download{margin-top:15rem}.featurs__cards{display:flex;align-items:center;justify-content:center;flex-wrap:wrap;padding:1rem 2rem;margin:10rem 0}.footer{display:flex;align-items:center;padding:2rem 10rem;margin-top:10rem;background-color:#eee}@media only screen and (min-width: 23.43em){.footer{flex-direction:column}}@media only screen and (min-width: 37.5em){.footer{flex-direction:row}}.footer__logo{width:5.5rem;height:5.5rem}@media only screen and (min-width: 23.43em){.footer__logo{margin-right:0rem}}@media only screen and (min-width: 37.5em){.footer__logo{margin-right:8rem}}@media only screen and (min-width: 23.43em){.footer__nav{margin:3rem 0}}@media only screen and (min-width: 37.5em){.footer__nav{margin:0 auto 0 0}}.footer__list{width:45vw;list-style:none;display:grid;grid-gap:1.3rem}@media only screen and (min-width: 23.43em){.footer__list{grid-template-columns:1fr;justify-items:center}}@media only screen and (min-width: 37.5em){.footer__list{justify-items:start;grid-template-columns:repeat(auto-fit, minmax(15rem, 1fr))}}.footer__link:link,.footer__link:visited{display:inline-block;text-decoration:none;color:#4c545d;font-size:1.5rem;font-weight:600;transition:transform .2s}@media only screen and (min-width: 23.43em){.footer__link:link,.footer__link:visited{padding:0rem}}@media only screen and (min-width: 37.5em){.footer__link:link,.footer__link:visited{padding:1.5rem}}.footer__link:link:not(:last-child),.footer__link:visited:not(:last-child){margin-right:1.5rem}.footer__link:hover{transform:translateY(-0.5rem) scale(1.05)}.footer__link:active{transform:translateY(-0.2rem) scale(1.02)}.footer__social{display:flex;align-items:center}.footer__icon{cursor:pointer;width:2.5rem;height:2.5rem}.header{height:95vh;display:flex;align-items:center;flex-direction:column;justify-content:center;background-image:url(../images/bg-header-desktop.png);background-size:cover;background-position:top}.header__logo{width:7rem;height:7rem;-webkit-animation:moveDown 1.5s ease backwards;animation:moveDown 1.5s ease backwards}
